--- a/style.css
+++ b/style.css
@@ -1,187 +1,14 @@
-body {
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
+.banner{
+    text-align: center;
+    background-color: antiquewhite;
+    border-radius: 20px;
+    padding: 5px;
+    font-family: 'Wix Madefor Text', sans-serif;
 }
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
+.banner h1{
+font-style:italic;
 }
-
-header {
-  background-color: #333;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-}
-
-.header-left h1 {
-  margin: 0;
-}
-
-.header-right nav ul {
-  display: none;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.header-right nav ul.active {
-  display: block;
-}
-
-.header-right nav ul li {
-  margin: 0 1rem;
-}
-
-.header-right nav ul li a {
-  color: white;
-  text-decoration: none;
-}
-
-.header-right .menu-toggle {
-  background-color: transparent;
-  border: none;
-  color: white;
-  cursor: pointer;
-  font-size: 1.5rem;
-  outline: none;
-}
-
-main {
-  margin: 4rem 0;
-}
-
-.section {
-  margin-bottom: 4rem;
-}
-
-.section h2 {
-  margin-top: 0;
-}
-
-.about-section {
-  display: flex;
-  align-items: center;
-}
-
-.about-section img {
-  border-radius: 50%;
-  height: 15rem;
-  margin-right: 2rem;
-  width: 15rem;
-}
-
-.project-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  grid-gap: 2rem;
-}
-
-.project {
-  background-color: #f8f8f8;
-  border-radius: 0.5rem;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  position: relative;
-}
-
-.project img {
-  width: 100%;
-  height: 15rem;
-  object-fit: cover;
-  transition: transform 0.3s;
-}
-
-.project:hover img {
-  transform: scale(1.1);
-}
-
-.project h3 {
-  margin: 1rem 0;
-}
-
-.skills-section {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 2rem;
-}
-
-.skill {
-  width: 50%;
- 
-.skill h3 {
-  margin: 0;
-}
-
-.skill-level {
-  background-color: #ddd;
-  border-radius: 0.5rem;
-  height: 1rem;
-  margin-top: 0.5rem;
-}
-
-.education-section {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 2rem;
-}
-
-.education {
-  width: 50%;
-}
-
-.education h3 {
-  margin: 0;
-}
-
-.education h4 {
-  font-style: italic;
-  margin: 0.5rem 0;
-}
-
-.experience-section {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 2rem;
-}
-
-.experience {
-  width: 50%;
-}
-
-.experience h3 {
-  margin: 0;
-}
-
-.experience h4 {
-  font-style: italic;
-  margin: 0.5rem 0;
-}
-
-footer {
-  background-color: #333;
-  color: white;
-  padding: 1rem;
-  text-align: center;
-}
-
-@media (min-width: 800px) {
-  .header-right nav ul {
-    display: flex;
-  }
-
-  .header-right .menu-toggle {
-    display: none;
-  }
+.banner h2{
+    font-family: 'Macondo', cursive;
 }
 
